--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/application.properties
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 logging.level.org.springframework.security=DEBUG
+spring.web.resources.static-locations=classpath:/static/,file:./src/main/resources/static/imgs/escudos/
+spring.servlet.multipart.max-request-size=128MB
