--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/application.properties
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/application.properties
@@ -8,3 +8,4 @@ logging.level.org.springframework.security=DEBUG
 spring.web.resources.static-locations=classpath:/static/,file:./src/main/resources/static/imgs/escudos/
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.max-file-size=10MB
+server.port=8090
