--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password = LIhViumMxFMVWuubnSFWaZWuoXcTNJiY
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 logging.level.org.springframework.security=DEBUG
-spring.web.resources.static-locations=classpath:/static/,file:./src/main/resources/static/imgs/escudos/
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.max-file-size=10MB
 server.port=35001
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
