--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=ProyectoIntegrado-IvanCruzado
-spring.datasource.url=jdbc:mysql://localhost:3306/bdproyecto?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:LIhViumMxFMVWuubnSFWaZWuoXcTNJiY@monorail.proxy.rlwy.net:35001/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=LIhViumMxFMVWuubnSFWaZWuoXcTNJiY
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 logging.level.org.springframework.security=DEBUG
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.max-file-size=10MB
-server.port=35001
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
