--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
     - assets/images/fondologinapp.jpg
     - assets/images/camareros.jpg
     - assets/images/file.png
+    - assets/images/card.png
+    - assets/images/cash.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
