--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/images/file.png
     - assets/images/card.png
     - assets/images/cash.png
+    - assets/images/billar.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
