update pool clients

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/images/card.png
     - assets/images/cash.png
     - assets/images/billar.png
+    - assets/images/tablero.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
